WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87944
WebCore fails to compile with SVG disabled.
https://bugs.webkit.org/show_bug.cgi?id=87944
Summary
WebCore fails to compile with SVG disabled.
Mike West
Reported
2012-05-31 02:26:23 PDT
The Chromium port fails to compile on linux w/ ninja/clang: ../../Source/WebCore/css/StyleResolver.cpp:3183:13: error: enumeration value 'CSSPropertyWebkitBoxDecorationBreak' not handled in switch [-Werror,-Wswitch] switch (id) { ../../Source/WebCore/css/CSSParser.cpp:1521:13: error: enumeration value 'CSSPropertyWebkitBoxDecorationBreak' not handled in switch [-Werror,-Wswitch] switch (propId) { Looks like this started after
https://bugs.webkit.org/show_bug.cgi?id=87678
landed
r118853
.
Attachments
Patch
(2.16 KB, patch)
2012-05-31 02:29 PDT
,
Mike West
no flags
Details
Formatted Diff
Diff
Patch
(2.15 KB, patch)
2012-05-31 02:38 PDT
,
Mike West
no flags
Details
Formatted Diff
Diff
Patch
(2.14 KB, patch)
2012-05-31 02:46 PDT
,
Mike West
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mike West
Comment 1
2012-05-31 02:29:22 PDT
Created
attachment 145023
[details]
Patch
jochen
Comment 2
2012-05-31 02:32:40 PDT
Comment on
attachment 145023
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=145023&action=review
> Source/WebCore/ChangeLog:3 > + Chromium port fails to compile on linux w/ ninja/clang
The patch looks good, but the changelog is incorrect. It's not Chromium ninja/clang that is the problem, but you try to compile with SVG disabled. If it's enabled, the switch statement has a default: branch, and so the compilers don't catch the missing enum value
Mike West
Comment 3
2012-05-31 02:38:36 PDT
Created
attachment 145025
[details]
Patch
Mike West
Comment 4
2012-05-31 02:39:16 PDT
Thanks Jochen, that makes much more sense. I've updated the ChangeLog, and I'll head to IRC to find a reviewer.
jochen
Comment 5
2012-05-31 02:42:21 PDT
Comment on
attachment 145025
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=145025&action=review
> Source/WebCore/ChangeLog:3 > + [Chromium] Fixing compilation with SVG disabled.
plz drop the [chromium], this affects all ports
Mike West
Comment 6
2012-05-31 02:46:00 PDT
Created
attachment 145028
[details]
Patch
Mike West
Comment 7
2012-05-31 02:46:35 PDT
Ah. Right. Done.
WebKit Review Bot
Comment 8
2012-05-31 05:41:27 PDT
Comment on
attachment 145028
[details]
Patch Clearing flags on attachment: 145028 Committed
r119094
: <
http://trac.webkit.org/changeset/119094
>
WebKit Review Bot
Comment 9
2012-05-31 05:41:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug