Fixing compilation with SVG disabled. https://bugs.webkit.org/show_bug.cgi?id=87944

This patch adds the missing enumeration value
'CSSPropertyWebkitBoxDecorationBreak' into switch statements to make
clang happy.

Patch by Mike West <mkwst@chromium.org> on 2012-05-31
Reviewed by Alexis Menard.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):
* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList):

Canonical link: https://commits.webkit.org/105792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119094 268f45cc-cd09-0410-ab3c-d52691b4dbfc